[gd_scene load_steps=4 format=3 uid="uid://dahoia7y3oll3"]

[ext_resource type="Script" path="res://Scripts/Menus/main_menu.gd" id="1_xlphf"]
[ext_resource type="Texture2D" uid="uid://o58krccccykj" path="res://Assets/menu-backgrounds/main-menu-background-nochars.png" id="2_52nfi"]
[ext_resource type="AudioStream" uid="uid://cv4e4oqc70eqb" path="res://Assets/music/main-menu-song.mp3" id="2_jcnbh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlphf")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jcnbh")
autoplay = true
bus = &"Music"

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_52nfi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 80
text = "Spelnamn"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
text = "Quit To Desktop"

[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer2/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer2/Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer2/Quit" to="." method="_on_quit_button_up"]
